feat: JWT token validation before each request but register and login